# bpf_practis

./: .gitignore  CMakeLists.txt
app/: CMakeLists.txt
app/src/: main.c
bpf/: CMakeLists.txt  vmlinux.h  xdp_redirect_icmp.c
lib/: CMakeLists.txt
scripts/: build.sh  configure.sh  make-libbpf.sh  start-server.sh
